feat(project): create v8 api for segments support
Because

* We need to extend experiments to support segment functionality

This commit

* Creates a new v8 api based on the existing v6 api to support adding segments

Fixes #11290
